# typeahead

./: .gitignore  Cargo.toml  README.md  WALKTHROUGH.md  decisions.md
data/: typeahead.db  typeahead.db-shm  typeahead.db-wal
src/: batch.rs  cache.rs  db.rs  handlers.rs  indexer.rs  main.rs  models.rs  pagerank.rs  suggest.rs  trending.rs
static/: app.js  console.html  index.html  search.css  search.js  style.css
